--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.14.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
